force-app/main/default/objects/User_Roles__c/User_Roles__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>User_Roles</label>
</CustomObject>