force-app/main/default/objects/User_Roles__c/fields/Activities__c.field-meta.xml
<CustomField>
    <fullName>Activities__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activities</label>
    <type>Checkbox</type>
</CustomField>