force-app/main/default/objects/User_Roles__c/fields/CampaignMember__c.field-meta.xml
<CustomField>
    <fullName>CampaignMember__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CampaignMember</label>
    <type>Checkbox</type>
</CustomField>