force-app/main/default/objects/User_Roles__c/fields/Event_Attendee__c.field-meta.xml
<CustomField>
    <fullName>Event_Attendee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Event Attendee</label>
    <type>Checkbox</type>
</CustomField>