force-app/main/default/objects/User_Roles__c/fields/Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Opportunities__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opportunities</label>
    <type>Checkbox</type>
</CustomField>